<resources>
    <string name="app_name">IIITB-OpenSource Lab</string>
    <string name="hospital">MEDICAL</string>
    <string name="fire">FIRE</string>
    <string name="profile">profile</string>
    <string name="searching">searching</string>
    <string name="please_be_patient">Please be patient :)</string>
    <string name="searching_for_nearby_service">Searching for nearby service</string>
    <string name="name">Name:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_name">user name</string>
    <string name="phno">PhNo:</string>
    <string name="phone_no">Phone Number</string>
    <string name="pass">Pass:</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_name">Name</string>
    <string name="login_password">Password</string>
    <string name="no_account_sign_up">No account? Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="bloodgroup">Blood Group</string>
    <string name="namesignup">Name</string>
    <string name="addresssignup">Address</string>
    <string name="phone_no_signup">Phone No</string>
    <string name="password_signup">Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? LOGIN.</string>
    <string name="choose_account_type">Choose account type</string>
    <string name="user">User</string>
    <string name="service_provider">Service Provider</string>
    <string name="service_provider_type">Service Provider Type</string>
    <string name="submit">Submit</string>
    <string name="edit_profile_serviceprovider">Edit Profile</string>
    <string name="name_profile_serviceprovider">Name</string>
    <string name="phno_profile_serviceprovider">Phone Number</string>
    <string name="password_profile_serviceprovider">Password</string>
    <string name="address_profile_serviceprovider">Address</string>
    <string name="type_profile_serviceprovider">Service Type</string>
    <string name="save_profile_serviceprovider">Save</string>
    <string name="name_text_profile_serviceprovider">Name:</string>
    <string name="phno_text_profile_serviceprovider">Phno:</string>
    <string name="password_text_profile_serviceprovider">Pass:</string>
    <string name="address_text_profile_serviceprovider">Addr:</string>
    <string name="type_text_profile_serviceprovider">Type:</string>
    <string name="login_as_service_provider">Login as Service Provider?</string>
    <string name="login_as_user">Login as User?</string>
    <string name="history">history</string>
    <string name="current_requests"> CURRENT REQUESTS</string>
    <string name="details">Details</string>
    <string name="location">Address:</string>
    <string name="location1">Address</string>
    <string name="accept">ACCEPT</string>
    <string name="past_requests">PAST REQUESTS</string>
</resources>
