<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editprofile_serviceprovider-id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile_serviceprovider">

    <LinearLayout android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/paper"
        android:alpha="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
    </LinearLayout>

    <TextView
        android:id="@+id/edit_profile_serviceprovider_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_serviceprovider"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185" />

    <TextView
        android:id="@+id/name_serviceprovider_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/name_text_profile_serviceprovider"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_serviceprovider_id"
        app:layout_constraintVertical_bias="0.078" />

    <EditText
        android:id="@+id/edit_name_serviceprovider_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name_profile_serviceprovider"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toEndOf="@+id/name_serviceprovider_id"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_serviceprovider_id"
        app:layout_constraintVertical_bias="0.065"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/phno_serviceprovider_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phno"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_serviceprovider_id"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/edit_phno_serviceprovider_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phno_profile_serviceprovider"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toEndOf="@+id/phno_serviceprovider_id"
        app:layout_constraintTop_toBottomOf="@+id/edit_name_serviceprovider_id"
        app:layout_constraintVertical_bias="0.066"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/pass_serviceprovider_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text_profile_serviceprovider"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phno_serviceprovider_id"
        app:layout_constraintVertical_bias="0.097" />

    <EditText
        android:id="@+id/edit_pass_serviceprovider_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_profile_serviceprovider"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toEndOf="@+id/pass_serviceprovider_id"
        app:layout_constraintTop_toBottomOf="@+id/edit_phno_serviceprovider_id"
        app:layout_constraintVertical_bias="0.057" />

    <Button
        android:id="@+id/save_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_type_serviceprovider_id" />

    <TextView
        android:id="@+id/addr_serviceprovider_id"
        android:layout_width="57dp"
        android:layout_height="36dp"
        android:text="@string/address_text_profile_serviceprovider"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_serviceprovider_id"
        app:layout_constraintVertical_bias="0.115" />

    <EditText
        android:id="@+id/edit_addr_serviceprovider_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/address_profile_serviceprovider"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toEndOf="@+id/addr_serviceprovider_id"
        app:layout_constraintTop_toBottomOf="@+id/edit_pass_serviceprovider_id"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/type_serviceprovider_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_text_profile_serviceprovider"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_addr_serviceprovider_id"
        app:layout_constraintVertical_bias="0.137" />

    <Spinner
        android:id="@+id/edit_type_serviceprovider_id"
        android:layout_width="212dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_addr_serviceprovider_id"
        app:layout_constraintVertical_bias="0.109" />

</androidx.constraintlayout.widget.ConstraintLayout>